syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

service ProductService {
    rpc GetProductById (ProductRequest) returns (Product) {}
    rpc GetProduct(google.protobuf.Empty) returns (ProductList) {}
}

message ProductRequest {
    int32 id = 1;
}

message Product {
    int32 id = 1;
    string name = 2;
    int32 price = 3;
}

message ProductList {
    repeated Product product = 1;
}